--- a/Duc anh/task3.html
+++ b/Duc anh/task3.html
@@ -11,9 +11,9 @@
     <head><title> Task3.html</title></head>
     <body>
         <h1>
-            
+            <!-- cho vao trong figure chinh vi tri, 
+            them duoc figcaption-->
             <figure>
-              
             <img src= "images/1.jpg" width=300 height=400 title="Neko" />
             <figcaption> Neko </figcaption>
         </figure>
